<resources>
    <string name="app_name">BHBH - Be Healthy Be Happy</string>
    <string name="tap_to_begin">Tap To Begin</string>

    <string name="info_red_hearts">Red heart(s) represents food and drink score (daily target score is set in settings tab).</string>
    <string name="info_black_hearts">Black heart(s) represents high carbs food and drink score.</string>
    <string name="info_green_stars">Green star(s) represents activities score.</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="target_score">Target Score</string>

    <string name="drink">Add Drink</string>
    <string name="activity">Add Activity</string>
    <string name="food">Add Food</string>
    <string name="save">Save Changes</string>
    <string name="back">Back</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="hello_none">Hello Dear User!</string>
    <string name="weight_none">No weight was entered</string>
    <string name="bmi_none">Not enough data to provide BMI</string>
    <string name="score_none">No target score was entered</string>


    <string name="hello">Hello</string>
    <string name="last_weight">Last Known Weight:</string>
    <string name="bmi">Your BMI is:</string>
    <string name="progress_score">Your progress is:</string>


    <string name="read">Read More</string>
    <string name="add_custom">Add Custom</string>
    <string name="item_name">Name of</string>
    <string name="item_weight_grams">Weight (grams)</string>
    <string name="item_amount_milliliters">Amount (milliliters)</string>
    <string name="item_calories">Calories</string>
    <string name="item_carbs">Carbs (optional)</string>
    <string name="item_notes">Notes (optional)</string>
    <string name="add">Add</string>
    <string name="item_duration">Duration (minutes)</string>
    <string name="item_calories_burned">Calories Burned</string>

    <string name="sign_in_cancelled" translatable="false">Sign In Cancelled</string>
    <string name="no_internet_connection" translatable="false">No internet connection</string>
    <string name="unknown_error" translatable="false">unknown error</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="set_quantity">Set Quantity</string>
    <string name="log_out">Log Out</string>

    <string name="quantity">Quantity:</string>

    <string name="item_creation">Creation Page</string>
    <string name="item_amount_measure">is being measured by</string>
    <string name="free">Item is free</string>
</resources>