<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CustomeItemActivity"
    android:background="@drawable/custom_item_back"
    android:gravity="center"
    android:fitsSystemWindows="true"
    >

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_EDT_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/item_name"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxBackgroundColor="@color/light_grey"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_EDT_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/item_weight_grams"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxBackgroundColor="@color/light_grey"
            android:layout_below="@id/item_EDT_name"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_EDT_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/item_amount_milliliters"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxBackgroundColor="@color/light_grey"
        android:layout_below="@id/item_EDT_weight"
        app:boxCornerRadiusTopStart="12dp"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_EDT_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/item_calories"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxBackgroundColor="@color/light_grey"
        android:layout_below="@id/item_EDT_amount"
        app:boxCornerRadiusTopStart="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_EDT_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/item_duration"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxBackgroundColor="@color/light_grey"
        android:layout_below="@id/item_EDT_calories"
        app:boxCornerRadiusTopStart="12dp"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_EDT_caloriesPerHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/item_calories_per_hour"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxBackgroundColor="@color/light_grey"
        android:layout_below="@id/item_EDT_time"
        app:boxCornerRadiusTopStart="12dp"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_EDT_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/item_carbs"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxBackgroundColor="@color/light_grey"
            android:layout_below="@id/item_EDT_caloriesPerHour"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_EDT_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/item_notes"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxBackgroundColor="@color/light_grey"
            android:layout_below="@id/item_EDT_carbs"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_BTN_save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add"
            app:cornerRadius="50dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/purple_200"
            android:textColor="@color/purple_700"
            android:layout_below="@id/item_EDT_notes"
            />


</RelativeLayout>