<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:background="@drawable/home_back"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/main_LBL_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_changeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            />


        <TextView
            android:id="@+id/main_LBL_progress"
           android:layout_margin="5dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:textStyle="bold|italic"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_addDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:maxWidth="100dp"
                android:text="@string/drink"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="50dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                app:strokeColor="@color/blue_a700"
                android:textColor="@color/blue_a700"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_addActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:maxWidth="120dp"
                android:text="@string/activity"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="50dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                app:strokeColor="@color/green_a700"
                android:textColor="@color/green_a700"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_addFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:maxWidth="100dp"
                android:text="@string/food"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="50dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                app:strokeColor="@color/red_a700"
                android:textColor="@color/red_a700"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/main_LBL_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/grey"
            />

        <TextView
            android:id="@+id/main_LBL_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/grey"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_LST_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="#45454545" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>